--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "adom-js",
-  "version": "0.17.14",
+  "version": "0.17.16",
   "description": "Advanced Data Oriented Markup",
   "main": "index.js",
   "scripts": {
-    "dev": "node cli.js --dev -d dev-project -r /=index.adom"
+    "dev": "node dev-project/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,5 @@
     "url": "https://github.com/mllev/a.dom/issues"
   },
   "homepage": "https://github.com/mllev/a.dom#readme",
-  "dependencies": {
-    "typescript": "^4.3.5"
-  }
+  "dependencies": {}
 }
